<resources>
    <string name="app_name">Tutor Seeker</string>
    <string name="nm">Name</string>
    <string name="pn">Contact</string>
    <string name="ss">Speciality</string>
    <string name="rr">Rate</string>
    <string name="rc">Recommendations</string>
    <string name="send">SEND SMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="tag">Register with us today \n to provide tutor services!</string>
    <string name="your_name">Your name</string>
    <string name="e_mail">Your Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
</resources>
